Внесена новая переменная wasRunning типа boolean для того, чтобы приложение приложение продолжало работу после остановки либо перекрытия другой активностью в случае, если оно было запущено до этого. Добавлены методы onStart(), onResume(), onStop() и onPause(). Приведены некоторые пояснения

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ActivityLifecycle</string>
     <string name="start">Start</string>
     <string name="stop">Stop</string>
+    <string name="timer">timer</string>
 </resources>
